fixed inventory tests to test event driven communications